fixed Load More button not readable in night theme

--- a/app/assets/stylesheets/_mixins.scss
+++ b/app/assets/stylesheets/_mixins.scss
@@ -41,5 +41,6 @@
     max-width: 80%;
     border-radius: 100px;
     font-weight: bold;
+    color: inherit
   }
 }
